--- a/.github/workflows/afl-nightly.yml
+++ b/.github/workflows/afl-nightly.yml
@@ -1,7 +1,6 @@
 name: afl-nightly
 on:
-  schedule:
-    - cron: "0 3 * * *"
+  schedule: [{ cron: "0 3 * * *" }]
   workflow_dispatch: {}
 
 permissions:
@@ -16,10 +15,11 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
 
-      - name: Install AFL++
+      - name: Install AFL++ & protoc
         run: |
           sudo apt-get update
-          sudo apt-get install -y afl++ clang
+          sudo apt-get install -y afl++ clang protobuf-compiler
+          protoc --version
 
       - name: Build target (release)
         run: cargo build --release
