--- a/.github/workflows/afl-nightly.yml
+++ b/.github/workflows/afl-nightly.yml
@@ -1,8 +1,8 @@
 name: afl-nightly
 on:
-  schedule: [{ cron: "0 3 * * *" }]
+  schedule:
+    - cron: "0 3 * * *"
   workflow_dispatch: {}
-
 permissions:
   contents: read
 
@@ -19,7 +19,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y afl++ clang protobuf-compiler
-          protoc --version
 
       - name: Build target (release)
         run: cargo build --release
@@ -29,7 +28,7 @@ jobs:
           mkdir -p fuzz/seeds
           printf '0A0B0C\n0001020304\n' > fuzz/seeds/seed.txt
 
-      - name: Fuzz for 20 minutes (non-blocking)
+      - name: Fuzz 20m (non-blocking)
         env:
           AFL_SKIP_CPUFREQ: "1"
           AFL_I_DONT_CARE_ABOUT_MISSING_CRASHES: "1"
@@ -39,10 +38,20 @@ jobs:
           afl-fuzz -V 1200 -i fuzz/seeds -o fuzz/out -- \
             target/release/linux_gateway --decode @@ || true
 
-      - name: Upload AFL output (always)
+      - name: Tar AFL output (always)
+        if: always()
+        run: |
+          mkdir -p artifacts
+          if [ -d fuzz/out ]; then
+            tar -C fuzz -czf artifacts/afl-out-${GITHUB_RUN_ID}.tgz out
+          else
+            tar -czf artifacts/afl-out-${GITHUB_RUN_ID}.tgz --files-from /dev/null
+          fi
+
+      - name: Upload AFL archive (always)
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: afl-out-${{ github.run_id }}
-          path: fuzz/out/
-          if-no-files-found: ignore
+          path: artifacts/afl-out-${{ github.run_id }}.tgz
+          compression-level: 0
