--- a/.github/workflows/afl-smoke.yml
+++ b/.github/workflows/afl-smoke.yml
@@ -1,47 +1,55 @@
 name: afl-smoke
-
 on:
-  workflow_dispatch:
-  workflow_run:
-    workflows: ["CI"]
-    types: [completed]
+  workflow_dispatch: {}
+permissions:
+  contents: read
 
 jobs:
   afl:
     runs-on: ubuntu-latest
-    timeout-minutes: 6
-    continue-on-error: true
-
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
 
-      - name: Install deps
+      - name: Install AFL++ & protoc
         run: |
           sudo apt-get update
-          sudo apt-get install -y afl++ qemu-user-static
-          rustup toolchain install stable
-          rustup default stable
+          sudo apt-get install -y afl++ clang protobuf-compiler
 
-      - name: Build (release)
+      - name: Build target (release)
         run: cargo build --release
 
       - name: Seed corpus
         run: |
-          mkdir -p seeds
-          printf "00\n"   > seeds/00.hex
-          printf "0A0B\n" > seeds/ab.hex
+          mkdir -p fuzz/seeds
+          printf '0A0B0C\n0001020304\n' > fuzz/seeds/seed.txt
 
-      - name: AFL for 60s (tolerant)
+      - name: Fuzz 60s (non-blocking)
+        env:
+          AFL_SKIP_CPUFREQ: "1"
+          AFL_I_DONT_CARE_ABOUT_MISSING_CRASHES: "1"
+          AFL_NO_UI: "1"
         run: |
-          set -euo pipefail
-          mkdir -p out
-          timeout 60s afl-fuzz -i seeds -o out -- ./target/release/linux_gateway --decode @@ || true
+          mkdir -p fuzz/out
+          afl-fuzz -V 60 -i fuzz/seeds -o fuzz/out -- \
+            target/release/linux_gateway --decode @@ || true
 
-      - name: Upload AFL output
+      - name: Tar AFL output (always)
+        if: always()
+        run: |
+          mkdir -p artifacts
+          if [ -d fuzz/out ]; then
+            tar -C fuzz -czf artifacts/afl-out-${GITHUB_RUN_ID}.tgz out
+          else
+            tar -czf artifacts/afl-out-${GITHUB_RUN_ID}.tgz --files-from /dev/null
+          fi
+
+      - name: Upload AFL archive (always)
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: afl-out-${{ github.run_id }}
-          path: out
-          if-no-files-found: ignore
-          retention-days: 7
+          path: artifacts/afl-out-${{ github.run_id }}.tgz
+          compression-level: 0
