ci(summary): set COVERAGE_MIN=25; tolerate missing LCOV unless COVERAGE_REQUIRED=1

--- a/.github/workflows/ci-summary.yml
+++ b/.github/workflows/ci-summary.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       REPO: ${{ github.repository }}
-      COVERAGE_MIN: "50"8"
+      COVERAGE_MIN: "25"8"
       GH_TOKEN: ${{ github.token }}
 
     steps:
@@ -124,7 +124,11 @@ if pct is None:
 if pct is None:
     print("[CI] Line coverage: not found")
     print("- Line coverage: not found")
-    sys.exit(1)
+    
+    # do not fail hard if missing
+    if os.environ.get("COVERAGE_REQUIRED","0")=="1":
+        sys.exit(1)
+    sys.exit(0)
 else:
     print(f"[CI] Line coverage: {pct:.2f}%")
     print(f"- Line coverage: {pct:.2f}%")
