--- a/.github/workflows/afl-smoke.yml
+++ b/.github/workflows/afl-smoke.yml
@@ -1,31 +1,30 @@
 name: afl-smoke
 on:
   workflow_dispatch: {}
+  workflow_run:
+    workflows: ["CI"]
+    types: [completed]
+
 permissions:
   contents: read
+  issues: write
 
 jobs:
-  afl:
+  fuzz:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 25
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
-
-      - name: Install AFL++ & protoc
+      - name: Install deps (AFL++)
         run: |
           sudo apt-get update
-          sudo apt-get install -y afl++ clang protobuf-compiler
-
-      - name: Build target (release)
+          sudo apt-get install -y afl++ clang
+      - name: Build release target
         run: cargo build --release
-
-      - name: Seed corpus
-        run: |
-          mkdir -p fuzz/seeds
-          printf '0A0B0C\n0001020304\n' > fuzz/seeds/seed.txt
-
+      - name: Seed corpus (exists-ok)
+        run: mkdir -p fuzz/seeds
       - name: Fuzz 60s (non-blocking)
         env:
           AFL_SKIP_CPUFREQ: "1"
@@ -35,21 +34,33 @@ jobs:
           mkdir -p fuzz/out
           afl-fuzz -V 60 -i fuzz/seeds -o fuzz/out -- \
             target/release/linux_gateway --decode @@ || true
-
-      - name: Tar AFL output (always)
+      - name: Tar AFL output
         if: always()
+        id: pack
         run: |
-          mkdir -p artifacts
-          if [ -d fuzz/out ]; then
-            tar -C fuzz -czf artifacts/afl-out-${GITHUB_RUN_ID}.tgz out
+          mkdir -p upload
+          tar -czf "upload/afl-out-${GITHUB_RUN_ID}.tgz" -C fuzz/out .
+          # Detect crashes for conditional issue filing
+          if compgen -G "fuzz/out/crashes/*" > /dev/null; then
+            echo "has_crashes=yes" >> "$GITHUB_OUTPUT"
+            echo "crash_count=$(find fuzz/out/crashes -type f | wc -l | tr -d ' ')" >> "$GITHUB_OUTPUT"
           else
-            tar -czf artifacts/afl-out-${GITHUB_RUN_ID}.tgz --files-from /dev/null
+            echo "has_crashes=no" >> "$GITHUB_OUTPUT"
+            echo "crash_count=0" >> "$GITHUB_OUTPUT"
           fi
-
-      - name: Upload AFL archive (always)
+      - name: Upload AFL output
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: afl-out-${{ github.run_id }}
-          path: artifacts/afl-out-${{ github.run_id }}.tgz
-          compression-level: 0
+          path: upload/*.tgz
+      - name: File issue if crashes
+        if: steps.pack.outputs.has_crashes == 'yes'
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          gh issue create \
+            --title "AFL crash: ${{ steps.pack.outputs.crash_count }} inputs (run $GITHUB_RUN_ID)" \
+            --body  "AFL found **${{ steps.pack.outputs.crash_count }}** crashing inputs in run **$GITHUB_RUN_ID**.
+                     Artifact: \`afl-out-$GITHUB_RUN_ID\`" \
+            --label bug,security,fuzzing
