--- a/r5/Makefile
+++ b/r5/Makefile
@@ -1,6 +1,16 @@
-# --- Nanopb wiring ---
-CFLAGS += -I$(CURDIR)/vendor/nanopb -I$(CURDIR)/generated
-SRCS   += $(CURDIR)/vendor/nanopb/pb_common.c \
-          $(CURDIR)/vendor/nanopb/pb_decode.c \
-          $(CURDIR)/vendor/nanopb/pb_encode.c \
-          $(CURDIR)/generated/calc.pb.c
+PKG := protobuf-c
+CFLAGS := $(shell pkg-config --cflags $(PKG))
+LIBS := $(shell pkg-config --libs $(PKG))
+
+all: host-smoke
+
+calc.pb-c.c calc.pb-c.h: ../proto/calc.proto
+	protoc-c --c_out=. $<
+
+host-smoke: calc.pb-c.c host_roundtrip.c echo_calc.c
+	$(CC) -O2 -o $@ $^ $(CFLAGS) $(LIBS)
+
+clean:
+	rm -f host_smoke *.o calc.pb-c.c calc.pb-c.h
+
+.PHONY: all clean
