--- a/.github/workflows/ci-summary.yml
+++ b/.github/workflows/ci-summary.yml
@@ -22,37 +22,44 @@ jobs:
       GH_TOKEN: ${{ github.token }}
     steps:
       - name: Resolve run_id
+        id: resolve
         shell: bash
+        env:
+          WF_NAME: "CI"
         run: |
           set -euo pipefail
           RID=""
           if [ "${{ github.event_name }}" = "workflow_run" ]; then
             RID="${{ github.event.workflow_run.id }}"
           fi
-          if [ -z "${RID}" ] && [ -n "${{ inputs.run_id || '' }}" ]; then
+          if [ -z "$RID" ] && [ -n "${{ inputs.run_id }}" ]; then
             RID="${{ inputs.run_id }}"
           fi
-          if [ -z "${RID}" ]; then
+          if [ -z "$RID" ]; then
             RID="$(gh run list -R "$REPO" --json databaseId,headSha,workflowName -L 50 \
-                  --jq ".[] | select(.headSha==\"$GITHUB_SHA\" and .workflowName==\"CI\") | .databaseId" \
-                  | head -n1 || true)"
+              --jq ".[] | select(.headSha==\"$GITHUB_SHA\" and .workflowName==\"${WF_NAME}\") | .databaseId" \
+              | head -n1 || true)"
           fi
-          if [ -z "${RID}" ]; then
-            echo "::error::No run_id to aggregate for $GITHUB_SHA."
+          if [ -z "$RID" ]; then
+            echo "::error::No run_id to aggregate for $GITHUB_SHA (workflow '${WF_NAME}' not found)."
             exit 1
           fi
-          echo "RID=$RID" | tee -a "$GITHUB_STEP_SUMMARY"
+          echo "RID=$RID"
+          echo "rid=$RID" >> "$GITHUB_OUTPUT"
 
-      - name: List CI artifacts
-        run: gh api "repos/${REPO}/actions/runs/${RID}/artifacts" --jq '{count:.total_count, names:[.artifacts[].name]}'
+      - name: List artifacts
+        run: gh api "repos/${REPO}/actions/runs/${{ steps.resolve.outputs.rid }}/artifacts" --jq '{count:.total_count, names:[.artifacts[].name]}'
 
-      - name: Download CI artifacts
+      - name: Download artifacts
         run: |
           mkdir -p artifacts
-          gh run download -R "$REPO" "$RID" -D artifacts || true
-          echo "Files:"; find artifacts -type f | sed 's/^/ - /'
+          if ! gh run download -R "$REPO" "${{ steps.resolve.outputs.rid }}" -D artifacts; then
+            echo "::error::Download failed or no artifacts present for run ${{ steps.resolve.outputs.rid }}"
+            exit 1
+          fi
+          echo "Downloaded files:"; find artifacts -type f | sed 's/^/ - /'
 
-      - name: JUnit summary (non-fatal if none)
+      - name: JUnit summary (fail on failures/errors)
         shell: bash
         run: |
           python3 - <<'PY' | tee -a "$GITHUB_STEP_SUMMARY"
@@ -63,8 +70,7 @@ for r,_,fs in os.walk('artifacts'):
         if fn.endswith('.xml') and ('junit' in fn or 'test-results' in r or 'surefire' in r or 'failsafe' in r):
             paths.append(os.path.join(r,fn))
 if not paths:
-    print("### CI Summary\n\n- JUnit: not found")
-    sys.exit(0)
+    print("[CI] JUnit: 0 tests, 0 failures, 0 errors, 0 skipped"); sys.exit(0)
 T=F=E=S=0
 for p in paths:
     try:
@@ -83,7 +89,7 @@ print("### CI Summary\n\n- "+msg[5:]+"\n")
 if F>0 or E>0: sys.exit(1)
 PY
 
-      - name: Coverage summary (LCOV → JaCoCo)
+      - name: Coverage summary (LCOV → JaCoCo XML fallback)
         shell: bash
         run: |
           set -euo pipefail
@@ -112,9 +118,11 @@ if pct is None:
     tot=covered+missed
     if tot: pct=covered/tot*100.0
 if pct is None:
+    print("[CI] Line coverage: not found")
     print("- Line coverage: not found")
-    sys.exit(0)
+    sys.exit(1)
 else:
+    print(f"[CI] Line coverage: {pct:.2f}%")
     print(f"- Line coverage: {pct:.2f}%")
     minv=float(os.environ.get("COVERAGE_MIN","25"))
     if pct < minv: sys.exit(1)
