r5: use protoc+protoc-gen-c with proper -I; pkg-config flags

--- a/r5/Makefile
+++ b/r5/Makefile
@@ -1,16 +1,18 @@
-PKG := protobuf-c
-CFLAGS := $(shell pkg-config --cflags $(PKG))
-LIBS := $(shell pkg-config --libs $(PKG))
+CC ?= gcc
+CFLAGS ?= -O2
+
+# Use pkg-config for protobuf-c flags
+CFLAGS  += $(shell pkg-config --cflags protobuf-c)
+LDLIBS  += $(shell pkg-config --libs protobuf-c)
 
 all: host-smoke
 
+# Generate C stubs from ../proto/calc.proto
 calc.pb-c.c calc.pb-c.h: ../proto/calc.proto
-	protoc-c --c_out=. $<
+	protoc -I ../proto --plugin=protoc-gen-c=$(shell which protoc-gen-c) --c_out=. $<
 
-host-smoke: calc.pb-c.c host_roundtrip.c echo_calc.c
-	$(CC) -O2 -o $@ $^ $(CFLAGS) $(LIBS)
+host-smoke: echo.o calc.pb-c.o
+	$(CC) $(CFLAGS) -o $@ $^ $(LDLIBS)
 
 clean:
-	rm -f host-smoke *.o calc.pb-c.c calc.pb-c.h
-
-.PHONY: all clean
+	rm -f host-smoke *.o calc.pb-c.c calc.pb-c.h gen-req
