r5: fix codegen & build (protoc+protoc-gen-c, pkg-config, deps)

--- a/r5/Makefile
+++ b/r5/Makefile
@@ -1,18 +1,21 @@
-CC ?= gcc
+.PHONY: all clean
+CC ?= cc
 CFLAGS ?= -O2
+PROTO = ../proto/calc.proto
 
-# Use pkg-config for protobuf-c flags
 CFLAGS  += $(shell pkg-config --cflags protobuf-c)
 LDLIBS  += $(shell pkg-config --libs protobuf-c)
 
 all: host-smoke
 
-# Generate C stubs from ../proto/calc.proto
-calc.pb-c.c calc.pb-c.h: ../proto/calc.proto
-	protoc -I ../proto --plugin=protoc-gen-c=$(shell which protoc-gen-c) --c_out=. $<
+calc.pb-c.c calc.pb-c.h: $(PROTO)
+	protoc -I ../proto --plugin=protoc-gen-c=$(shell which protoc-gen-c) --c_out=. $(PROTO)
+
+echo.o: echo.c calc.pb-c.h
+calc.pb-c.o: calc.pb-c.c calc.pb-c.h
 
 host-smoke: echo.o calc.pb-c.o
 	$(CC) $(CFLAGS) -o $@ $^ $(LDLIBS)
 
 clean:
-	rm -f host-smoke *.o calc.pb-c.c calc.pb-c.h gen-req
+	rm -f host-smoke *.o calc.pb-c.c calc.pb-c.h
