r5: robust Makefile for protobuf-c (pkg-config + Homebrew fallbacks)

--- a/r5/Makefile
+++ b/r5/Makefile
@@ -1,15 +1,24 @@
 .PHONY: all clean
-CC ?= cc
-CFLAGS ?= -O2
-PROTO = ../proto/calc.proto
+CC      ?= cc
+CFLAGS  ?= -O2
+PROTO    = ../proto/calc.proto
 
-CFLAGS  += $(shell pkg-config --cflags protobuf-c)
-LDLIBS  += $(shell pkg-config --libs protobuf-c)
+# Homebrew prefix (mac) or /opt/homebrew as default
+BREW_PREFIX := $(shell brew --prefix 2>/dev/null || echo /opt/homebrew)
+
+# Prefer pkg-config; fall back to common Homebrew include/lib dirs
+PKG_CFLAGS := $(shell pkg-config --cflags protobuf-c 2>/dev/null)
+PKG_LIBS   := $(shell pkg-config --libs   protobuf-c 2>/dev/null)
+CFLAGS     += $(if $(PKG_CFLAGS),$(PKG_CFLAGS),-I$(BREW_PREFIX)/include)
+LDLIBS     += $(if $(PKG_LIBS),$(PKG_LIBS),-L$(BREW_PREFIX)/lib -lprotobuf-c)
+
+PROTOC       ?= protoc
+PROTOC_GEN_C ?= $(shell command -v protoc-gen-c || echo protoc-gen-c)
 
 all: host-smoke
 
 calc.pb-c.c calc.pb-c.h: $(PROTO)
-	protoc -I ../proto --plugin=protoc-gen-c=$(shell which protoc-gen-c) --c_out=. $(PROTO)
+	$(PROTOC) -I ../proto --plugin=protoc-gen-c=$(PROTOC_GEN_C) --c_out=. $(PROTO)
 
 echo.o: echo.c calc.pb-c.h
 calc.pb-c.o: calc.pb-c.c calc.pb-c.h
