r5: portable Makefile (pkg-config first, Homebrew fallback); sync echo.c; regen calc.pb-c

--- a/r5/Makefile
+++ b/r5/Makefile
@@ -1,36 +1,33 @@
-BREW_PREFIX ?= $(shell brew --prefix protobuf-c 2>/dev/null || echo /opt/homebrew/opt/protobuf-c)
+BREW_PREFIX ?= $(shell brew --prefix 2>/dev/null)
 
-# Prefer pkg-config if available; otherwise fall back to Homebrew paths
-ifneq ($(shell command -v pkg-config >/dev/null 2>&1 && echo yes),)
-  ifeq ($(shell pkg-config --exists protobuf-c && echo yes),yes)
-    PKG_CFLAGS := $(shell pkg-config --cflags protobuf-c)
-    PKG_LIBS   := $(shell pkg-config --libs   protobuf-c)
-  else
-    PKG_CFLAGS := -I$(BREW_PREFIX)/include
-    PKG_LIBS   := -L$(BREW_PREFIX)/lib -lprotobuf-c
-  endif
-else
-  PKG_CFLAGS := -I$(BREW_PREFIX)/include
-  PKG_LIBS   := -L$(BREW_PREFIX)/lib -lprotobuf-c
-endif
+PKG_CFLAGS := $(shell sh -c '\
+  pkg-config --cflags protobuf-c      2>/dev/null || \
+  pkg-config --cflags libprotobuf-c   2>/dev/null || \
+  pkg-config --cflags protobuf-c-1.0  2>/dev/null || \
+  echo -I$(BREW_PREFIX)/opt/protobuf-c/include')
+
+PKG_LIBS := $(shell sh -c '\
+  pkg-config --libs protobuf-c        2>/dev/null || \
+  pkg-config --libs libprotobuf-c     2>/dev/null || \
+  pkg-config --libs protobuf-c-1.0    2>/dev/null || \
+  echo -L$(BREW_PREFIX)/opt/protobuf-c/lib -lprotobuf-c')
 
 CFLAGS ?= -O2 -DTEST_STANDALONE
+CFLAGS += $(PKG_CFLAGS)
 
 all: host-smoke
+
+calc.pb-c.c calc.pb-c.h: ../proto/calc.proto
+	@protoc -I ../proto --plugin=protoc-gen-c=$$(command -v protoc-gen-c) --c_out=. $<
+
+echo.o: echo.c calc.pb-c.h
+	$(CC) $(CFLAGS) -c $< -o $@
+
+calc.pb-c.o: calc.pb-c.c calc.pb-c.h
+	$(CC) $(CFLAGS) -c $< -o $@
 
 host-smoke: echo.o calc.pb-c.o
 	$(CC) $(CFLAGS) $^ $(PKG_LIBS) -o $@
 
-echo.o: echo.c calc.pb-c.h
-	$(CC) $(CFLAGS) $(PKG_CFLAGS) -c $< -o $@
-
-calc.pb-c.o: calc.pb-c.c calc.pb-c.h
-	$(CC) $(CFLAGS) $(PKG_CFLAGS) -c $< -o $@
-
-calc.pb-c.c calc.pb-c.h: ../proto/calc.proto
-	protoc -I ../proto --plugin=protoc-gen-c=$(shell command -v protoc-gen-c) --c_out=. $<
-
 clean:
 	rm -f host-smoke *.o calc.pb-c.c calc.pb-c.h
-
-.PHONY: all clean
